--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="root"></div>
     <script type="text/babel">
         // 🔒 CHANGE THIS PASSWORD TO WHATEVER YOU WANT
-        const CORRECT_PASSWORD = "mynotes2025";
+        const CORRECT_PASSWORD = "91";
 
         const App = () => {
             const [isAuthenticated, setIsAuthenticated] = React.useState(false);
